[ALLI-7419] Fix caret alignment, add aria-hidden attribute. (#2278)

--- a/themes/finna2/less/finna/tabs.less
+++ b/themes/finna2/less/finna/tabs.less
@@ -305,6 +305,8 @@
       margin-right: 10px;
     }
     .more {
+      display: flex;
+      align-items: center;
       font-size: 85%;
       padding-left: 10px;
       white-space: nowrap;
